trying to fix overflow issue

--- a/css/input.scss
+++ b/css/input.scss
@@ -18,9 +18,9 @@ body {
   // overflow:hidden;
 }
 
-.logo-container {
-  overflow-x: hidden;
-}
+// .logo-container {
+//   overflow-x: hidden;
+// }
 
 .container {
   @include grid-container;
@@ -148,6 +148,7 @@ $iphone-landscape-medium: (
     position: absolute;
     right: -2%;
     bottom: -4vh;
+    // overflow: hidden;
   }
 
   h1 {
