--- a/css/output.css
+++ b/css/output.css
@@ -5,9 +5,6 @@ body {
   margin: 0;
   padding: 0; }
 
-.logo-container {
-  overflow-x: hidden; }
-
 .container {
   width: 100vw;
   height: 100vh; }
